@@ -362,13 +362,16 @@ RefPtr<SharedBuffer> FontPlatformData::openTypeTable(uint32_t table) const
     if (FT_Load_Sfnt_Table(freeTypeFace, tag, 0, 0, &tableSize))
         return nullptr;
 
-    Vector<char> data(tableSize);
+    RefPtr<SharedBuffer> buffer = SharedBuffer::create(tableSize);
+    if (buffer->size() != tableSize)
+        return nullptr;
+
     FT_ULong expectedTableSize = tableSize;
-    FT_Error error = FT_Load_Sfnt_Table(freeTypeFace, tag, 0, reinterpret_cast<FT_Byte*>(data.data()), &tableSize);
+    FT_Error error = FT_Load_Sfnt_Table(freeTypeFace, tag, 0, reinterpret_cast<FT_Byte*>(const_cast<char*>(buffer->data())), &tableSize);
     if (error || tableSize != expectedTableSize)
         return nullptr;
 
-    return SharedBuffer::create(WTFMove(data));
+    return buffer;
 }
 
 } // namespace WebCore
